--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -23,15 +23,7 @@
       >Link to the project</a
     >
     <br /><br />
-    <div>
-      1. Google Chrome or Microsoft Edge<br />
-      2. Plug USB to the ESP32 2.4" or 2.8" TFT<br />
-      3. Select the model<br />
-      4. Click Flash to install firmware<br />
-      5. Check "Erase device" for a new firmware install<br />
-      Uncheck for only updating a new firmware version<br />
-    </div>
-    <br />
+
     <div id="main">
       <fieldset>
         <legend>Select firmware</legend>
@@ -55,8 +47,7 @@
             value="printpoop28_1_kitten"
             onclick="setManifest('printpoop28_1_kitten')"
           />
-          <label for="device2">🐯 PrintpooP 2.8" Kitten Variant 1</label
-          ><br />
+          <label for="device2">🐯 PrintpooP 2.8" Kitten Variant 1</label><br />
           <input
             type="radio"
             id="device3"
@@ -93,8 +84,7 @@
             value="printpoop28_1_puppy"
             onclick="setManifest('printpoop28_1_puppy')"
           />
-          <label for="device5">🐶 PrintpooP 2.8" Puppy Variant 1</label
-          ><br />
+          <label for="device5">🐶 PrintpooP 2.8" Puppy Variant 1</label><br />
           <input
             type="radio"
             id="device6"
