--- a/src/pages/OBD2-Gauge-Catalyst.html
+++ b/src/pages/OBD2-Gauge-Catalyst.html
@@ -9,22 +9,14 @@
 
   <body>
     <div>
-      <h1>OBD2 Gauge Catalyst (under development)</h1>
+      <h2>OBD2 Gauge Catalyst (under development)</h2>
   
        <a href="https://youtube.com/shorts/zx2siWw9A-U?si=RCQxRB1wuyyViUxC"  target="_blank" rel="noopener noreferrer">Youtube</a>
        <br><br>
-      <div>
-        1. Google Chrome or Microsoft Edge<br />
-        2. Plug USB to the ESP32 CYD 2.8" TFT<br />
-        3. Select the model<br />
-        4. Click Flash to install firmware<br />
-        5. Check "Erase device" for a new firmware install<br />
-        Uncheck for only updating a new firmware version<br />
-      </div>
-      <br />
+
       <div id="main">
         <fieldset>
-          <legend>Select firmware for Other Device</legend>
+          <legend>Select firmware</legend>
           <form id="select-firmware-other">
             <input
               type="radio"
