--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="tab-container">
       <div class="top-bar">
+        <img src="logo.webp" width="67" height="50">
         <a href="https://www.buymeacoffee.com/vaandcob"><img
           src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=vaandcob&button_colour=FF5F5F&font_colour=ffffff&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00"/></a>
         <button class="vibetime-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
@@ -35,7 +36,6 @@
         </p>
     
       <div class="tab-content">
-
         <iframe
           id="content-frame"
           src="./pages/esp32-bluetooth-obd2-gauge.html"
