--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -38,7 +38,7 @@
             onclick="setManifest('printpoop24_kitten')"
             checked
           />
-          <label for="device1">🐯 PrintpooP 2.4" Kitten</label><br />
+          <label for="device1">🐱 PrintpooP 2.4" Kitten</label><br />
           <input
             type="radio"
             id="device2"
@@ -47,7 +47,7 @@
             value="printpoop28_1_kitten"
             onclick="setManifest('printpoop28_1_kitten')"
           />
-          <label for="device2">🐯 PrintpooP 2.8" Kitten Variant 1</label><br />
+          <label for="device2">🐱 PrintpooP 2.8" Kitten Variant 1</label><br />
           <input
             type="radio"
             id="device3"
@@ -57,7 +57,7 @@
             onclick="setManifest('printpoop28_2_kitten')"
           />
           <label for="device3"
-            >🐯 PrintpooP 2.8" Kitten Variant 2
+            >🐱 PrintpooP 2.8" Kitten Variant 2
             <a
               href="https://randomnerdtutorials.com/esp32-cheap-yellow-display-cyd-pinout-esp32-2432s028r/"
               target="_blank"
