--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
           ESP32 Bluetooth OBD2 Gauge
         </button>
         <button class="tab-button" data-tab="printpoop">PrintpooP</button>
-        <button class="tab-button" data-tab="other">OBD2 Gauge Catalyst</button>
+        <button class="tab-button" data-tab="catalyst">OBD2 Gauge Catalyst</button>
+        <button class="tab-button" data-tab="tunebar">TuneBar</button>
       </div>
         <p>
     1. Open a web browser (Google Chrome or Microsoft Edge).<br>
@@ -53,7 +54,8 @@
         >
         </iframe>
       </div>
-      
+
+     
     </div>
 
 
