--- a/src/pages/tunebar.html
+++ b/src/pages/tunebar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OBD2 Gauge Catalyst</title>
+    <title>TuneBar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="referrer" content="no-referrer" />
     <meta
@@ -17,9 +17,9 @@
 
   <body>
     <div>
-      <h2>OBD2 Gauge Catalyst (under development)</h2>
+      <h2>TuneBar (under development)</h2>
   
-       <a href="https://youtube.com/shorts/zx2siWw9A-U?si=RCQxRB1wuyyViUxC"  target="_blank" rel="noopener noreferrer">Youtube</a>
+       <a href="https://youtube.com/shorts/wayJvx3LUYE?feature=share"  target="_blank" rel="noopener noreferrer">Youtube</a>
        <br><br>
 
       <div id="main">
@@ -28,14 +28,14 @@
           <form id="select-firmware-other">
             <input
               type="radio"
-              id="device-other"
+              id="tunebar"
               name="device"
-              value="other_device"
+              value="tunebar"
               style="margin: 20px"
-              onclick="setManifest('other_device')"
+              onclick="setManifest('tunebar')"
               checked
             />
-            <label for="device-other">OBD2 Gauge Catalyst (ESP32-CYD-2.8")</label><br />
+            <label for="device-other">TuneBar (Waveshare ESP32-S3 Touch 3.49")</label><br />
           </form>
           <hr />
                   <div class="terminal-container">
