--- a/src/pages/tunebar.html
+++ b/src/pages/tunebar.html
@@ -19,7 +19,7 @@
     <div>
       <h2>TuneBar (under development)</h2>
   
-       <a href="https://youtube.com/shorts/wayJvx3LUYE?feature=share"  target="_blank" rel="noopener noreferrer">Youtube</a>
+       <a href="https://www.youtube.com/shorts/wayJvx3LUYE"  target="_blank" rel="noopener noreferrer">Youtube</a>
        <br><br>
 
       <div id="main">
