index.html update

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,12 @@
     <div class="tab-container">
       <div class="top-bar">
         <img src="logo.webp" width="50" height="50">
+                <a href="https://www.youtube.com/@vacob6494" target="_blank"><img src="./youtube.png" alt="YouTube" style="width:32px;height:32px;vertical-align:middle;"></a>
+        <a href="https://www.facebook.com/vaandcob" target="_blank"><img src="./facebook.png" alt="Facebook" style="width:32px;height:32px;vertical-align:middle;"></a>
+        <button class="vibetime-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
         <a href="https://www.buymeacoffee.com/vaandcob"><img
           src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=vaandcob&button_colour=FF5F5F&font_colour=ffffff&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00"/></a>
-        <button class="vibetime-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
+        
       </div>
 
       <div class="tabs">
