--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="tab-container">
       <div class="top-bar">
         <img src="logo.webp" width="50" height="50">
-        <a href="https://www.youtube.com/@vacob6494" target="_blank"><img src="./youtube.png" alt="YouTube" style="width:32px;height:32px;vertical-align:middle;"></a>
+        <a href="https://www.youtube.com/@vaandcob" target="_blank"><img src="./youtube.png" alt="YouTube" style="width:32px;height:32px;vertical-align:middle;"></a>
         <a href="https://www.facebook.com/vaandcob" target="_blank"><img src="./facebook.png" alt="Facebook" style="width:32px;height:32px;vertical-align:middle;"></a>
         <button class="vibetime-button" onclick="window.open('https://vibetime.pages.dev', '_blank')">🎵 Vibetime</button>
         <a href="https://www.buymeacoffee.com/vaandcob"><img
