--- a/src/pages/tunebar.html
+++ b/src/pages/tunebar.html
@@ -15,10 +15,16 @@
   </head>  
 
   <body>
-      <h2>TuneBar (under development)</h2>
-  
-       <a href="https://youtu.be/vSDkJrvMamY"  target="_blank" rel="noopener noreferrer">Youtube</a></br></br>
-       <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqa3FNOVRNV3J4QndFWm5PQmVxX2tpVFlteUNGd3xBQ3Jtc0tsYkc4VWRfQVR5V0tILUVmSV9UNl9Db0Y3NVB3T1VqWUdvX1JlSFVCQ05Gb2dTanZsYzc5R2hxMUs4UVhHcU9hMHJ1dENPbTI2endya2pIaHBEdjZ5UjRrcEhLNEZ2RDhMRGlwcU9ERWtYU3dkdlpGMA&q=https%3A%2F%2Fs.click.aliexpress.com%2Fe%2F_c3ML7dDr&v=vSDkJrvMamY"  target="_blank" rel="noopener noreferrer">🛍 Buy Item</a>
+      <h2>TuneBar</h2>
+
+        <a>
+          <img
+            src="../asset/tunebar.jpg"
+            alt="TuneBar"
+            style="max-width: 300px; height: auto"
+          />
+        </a>
+       <a href="https://youtu.be/vSDkJrvMamY"  target="_blank" rel="noopener noreferrer">Youtube</a> | <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqa3FNOVRNV3J4QndFWm5PQmVxX2tpVFlteUNGd3xBQ3Jtc0tsYkc4VWRfQVR5V0tILUVmSV9UNl9Db0Y3NVB3T1VqWUdvX1JlSFVCQ05Gb2dTanZsYzc5R2hxMUs4UVhHcU9hMHJ1dENPbTI2endya2pIaHBEdjZ5UjRrcEhLNEZ2RDhMRGlwcU9ERWtYU3dkdlpGMA&q=https%3A%2F%2Fs.click.aliexpress.com%2Fe%2F_c3ML7dDr&v=vSDkJrvMamY"  target="_blank" rel="noopener noreferrer">🛍 Buy Item</a>
        <br><br>
 
       <div id="main">
