--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,18 @@
         <button class="tab-button" data-tab="catalyst">OBD2 Gauge Catalyst</button>
         <button class="tab-button" data-tab="tunebar">TuneBar</button>
       </div>
-        <p>
-    1. Open a web browser (Google Chrome or Microsoft Edge).<br>
-    2. Connect the ESP32 2.8" TFT to your computer via USB.<br>
-    3. Select the correct board model in the software.<br>
-    4. Click Flash to install the firmware.<br>
-    5. Choose whether to erase the device:<br>
-        - Check “Erase device” for a clean installation of new firmware.<br>
-        - Uncheck if updating the firmware without erasing existing data.<br>
-        </p>
+      <ol>
+        <li>Open this page in <strong>Google Chrome</strong> or <strong>Microsoft Edge</strong>.</li>
+        <li>Connect the board to your computer via USB.</li>
+        <li>Select the firmware version you want to flash.</li>
+        <li>Click <strong>Flash</strong> to start the installation.</li>
+        <li>When prompted:
+          <ul>
+            <li>Check <strong>Erase device</strong> for a clean installation (wipes all data).</li>
+            <li>Uncheck it to update firmware while keeping settings.</li>
+          </ul>
+        </li>
+      </ol>
     
       <div class="tab-content">
         <iframe
