--- a/src/test.html
+++ b/src/test.html
@@ -94,7 +94,7 @@
 
   
 
- <script type="module" src="../../webserial/install-button.js?module"></script>
+ <script type="module" src="../webserial/install-button.js?module"></script>
   <script>
     
    
