--- a/src/test.html
+++ b/src/test.html
@@ -98,7 +98,7 @@
   <script>
     
    
-      let url = "../../firmware/test/";
+      let url = "../firmware/test/";
       const terminal = document.getElementById("terminal");
       //output message on terminal textarea
       function terminalOut(message) {
