--- a/src/test.html
+++ b/src/test.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/tabs.css" />
   </head>
   <body>
-     <h2 id="firmware-title"></h2>
+     <h2 id="firmware-title">-</h2>
     <div class="tab-container">
       <div class="top-bar">
         <img src="./asset/logo.webp" width="50" height="50">
