--- a/src/test.html
+++ b/src/test.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/tabs.css" />
   </head>
   <body>
-     <h2 id="firmware-title">-</h2>
+   
     <div class="tab-container">
       <div class="top-bar">
         <img src="./asset/logo.webp" width="50" height="50">
@@ -22,7 +22,7 @@
       </div>
 
       <div class="tabs">
-        For testing:  PrintpooP
+        [ This page is for testing and debugging purpose only! ]
    
       </div>
       <ol>
@@ -39,7 +39,7 @@
       </ol>
       <div id="main">
       <fieldset>
-        <legend>Select firmware</legend>
+        <legend>Select firmware :   <h2 id="firmware-title">-</h2></legend>
         <form id="select-firmware">
           <br>
 
