--- a/src/test.html
+++ b/src/test.html
@@ -38,8 +38,9 @@
         </li>
       </ol>
       <div id="main">
+         <h2 id="firmware-title">-</h2>
       <fieldset>
-        <legend>Select firmware :   <h2 id="firmware-title">-</h2></legend>
+        <legend>Select firmware</legend>
         <form id="select-firmware">
           <br>
 
