--- a/src/pages/printpoop.html
+++ b/src/pages/printpoop.html
@@ -35,10 +35,20 @@
             class="firmware-radio"
             name="device"
             value="printpoop24_kitten"
-            onclick="setManifest('printpoop24_kitten')"
+            onclick="setManifest('printpoop24_1_kitten')"
             checked
           />
-          <label for="device1">🐱 PrintpooP 2.4" Kitten</label><br />
+          <label for="device1">🐱 PrintpooP 2.4" Kitten Variant 1</label><br />
+          <input
+            type="radio"
+            id="device1"
+            class="firmware-radio"
+            name="device"
+            value="printpoop24_kitten"
+            onclick="setManifest('printpoop24_2_kitten')"
+            checked
+          />
+          <label for="device1">🐱 PrintpooP 2.4" Kitten Variant 2</label><br />
           <input
             type="radio"
             id="device2"
@@ -57,14 +67,7 @@
             onclick="setManifest('printpoop28_2_kitten')"
           />
           <label for="device3"
-            >🐱 PrintpooP 2.8" Kitten Variant 2
-            <a
-              href="https://randomnerdtutorials.com/esp32-cheap-yellow-display-cyd-pinout-esp32-2432s028r/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Randomnerd</a
-            ></label
-          ><br />
+            >🐱 PrintpooP 2.8" Kitten Variant 2</label><br />
           <hr />
           <!--Puppy-->
           <input
@@ -73,9 +76,18 @@
             class="firmware-radio"
             name="device"
             value="printpoop24_puppy"
-            onclick="setManifest('printpoop24_puppy')"
+            onclick="setManifest('printpoop24_1_puppy')"
           />
-          <label for="device4">🐶 PrintpooP 2.4" Puppy</label><br />
+          <label for="device4">🐶 PrintpooP 2.4" Puppy Variant 1</label><br />
+                  <input
+            type="radio"
+            id="device4"
+            class="firmware-radio"
+            name="device"
+            value="printpoop24_puppy"
+            onclick="setManifest('printpoop24_2_puppy')"
+          />
+          <label for="device4">🐶 PrintpooP 2.4" Puppy Variant 2</label><br />
           <input
             type="radio"
             id="device5"
@@ -94,14 +106,7 @@
             onclick="setManifest('printpoop28_2_puppy')"
           />
           <label for="device6"
-            >🐶 PrintpooP 2.8" Puppy Variant 2
-            <a
-              href="https://randomnerdtutorials.com/esp32-cheap-yellow-display-cyd-pinout-esp32-2432s028r/"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Randomnerd</a
-            ></label
-          ><br />
+            >🐶 PrintpooP 2.8" Puppy Variant 2</label><br />
         </form>
         <hr />
            <div class="terminal-container">
